@startuml Router

title Router Core Class Diagram (detailed)

class RouterContext {
    {field} + RouteRegistry : RouteRegistry
    {field} + MiddlewarePipeline : MiddlewarePipeline
}

class Router {
    {field} - context : RouterContext
    {field} - dispatcher : RequestDispatcher

    {method} + get(path : string, handler : function) : void
    {method} + post(path : string, handler : function) : void
    {method} + put(path : string, handler : function) : void
    {method} + patch(path : string, handler : function) : void
    {method} + delete(path : string, handler : function) : void
    {method} + use(middleware : function) : void
    {method} + handle(req : Request, res : Response) : Promise<void>
    {method} - register(method : string, path : string, handler : function) : void
}

note right of Router
    Returns a callable async function (req, res, next)
    that carries the bound public API and a Router symbol.
    When registered as a handler on another router it is
    mounted automatically (nested routers).

    handle() wraps raw Node req/res into Request/Response
    (skipping re-wrap when already wrapped by a parent router).
end note

class mountRouter {
    {method} + mountRouter(nested : Router, mount : string, req : Request, res : Response) : Promise<void>
}

note right of mountRouter
    Strips the mount prefix from req.url, dispatches into the
    nested router, then restores req.url/req.query and merges params.
end note

class MiddlewarePipeline {
    {field} - middlewares : function[]
    {field} - errorMiddlewares : function[]

    {method} + use(middleware : function) : void
    {method} + execute(req : Request, res : Response, next? : function) : Promise<void>
    {method} - executeError(err : Error, req : Request, res : Response, next : function) : Promise<void>
}

class RouteRegistry {
    {field} - trie : RouteTrie

    {method} + register(method : string, path : string, handler : function) : void
    {method} + find(method : string, path : string) : RouteMatch
}

class RouteTrie {
    {field} - nodes : RouteNode[]
    {field} - handlers : function[]

    {method} + insert(method : string, path : string, handler : function) : void
    {method} + find(method : string, path : string) : RouteMatch
}

class RequestDispatcher {
    {method} + dispatch(req : Request, res : Response, context : RouterContext) : Promise<void>
}

class RouteMatch {
    {field} + handler : function
    {field} + params : object
}

class Request {
    {field} + raw : IncomingMessage

    {field} + method : string
    {field} + url : string
    {field} + path : string
    {field} + originalUrl : string
    {field} + protocol : string
    {field} + hostname : string
    {field} + ip : string
    {field} + headers : object

    {field} + query : object
    {field} + params : object
    {field} + body : any

    {field} + context : RequestContext
    {field} + locals : object

    {method} + get(name : string) : string
    {method} + header(name : string) : string
    {method} + accepts(type : string) : string | boolean
    {method} + is(type : string) : boolean
    {method} + param(name : string) : any
    {method} + secure() : boolean
    {method} + xhr() : boolean
    {method} + on(event : string, listener : function) : Request
    {method} + once(event : string, listener : function) : Request
    {method} + emit(event : string, ...args) : boolean
}

class RequestContext {
    {field} + file : object
    {field} + stream : ReadStream
    {field} + range : object
}

note right of Request
    Wraps the raw http.IncomingMessage.
    The static pipeline communicates
    through req.context (file / stream / range)
    instead of attaching fields to req directly.
end note

class Response {
    {field} + raw : ServerResponse
    {field} + body : any
    {field} + locals : object
    {field} + statusCode : number

    {method} + status(code : number) : Response
    {method} + set(name : string | object, value? : any) : Response
    {method} + get(name : string) : any
    {method} + has(name : string) : boolean
    {method} + remove(name : string) : Response
    {method} + type(type : string) : Response
    {method} + send(body : any) : Response
    {method} + json(obj : object) : Response
    {method} + html(html : string) : Response
    {method} + redirect(url : string, status? : number) : Response
    {method} + download(path : string) : Response
    {method} + sendFile(path : string) : Response
    {method} + attachment(filename : string) : Response
    {method} + cookie(name : string, value : any, options? : object) : Response
    {method} + clearCookie(name : string) : Response
    {method} + end(data? : any, encoding? : string, callback? : function) : Response
    {method} + write(chunk : any, encoding? : string, callback? : function) : boolean
    {method} + writeHead(statusCode : number, statusMessage? : string, headers? : object) : ServerResponse
    {method} + on/once/emit/removeListener/destroy : passthrough
}

note right of Response
    Wraps the raw http.ServerResponse.
    Low-level Node methods (write, end,
    writeHead, events, stream state) are
    delegated to the raw response so
    req.context.stream.pipe(res) still works.
end note

Router "1" *-- "1" RouterContext : owns
Router "1" *-- "1" RequestDispatcher : owns

Router ..> mountRouter : uses (nested routers)
Router "1" *-- "0..*" Router : mounts

RouterContext "1" *-- "1" RouteRegistry : owns
RouterContext "1" *-- "1" MiddlewarePipeline : owns

RouteRegistry "1" *-- "1" RouteTrie : owns
RouteRegistry ..> RouteMatch : returns

RequestDispatcher --> RouterContext : accesses
RequestDispatcher ..> Request : uses
RequestDispatcher ..> Response : uses

Router ..> Request : wraps
Router ..> Response : wraps
Request "1" o-- "1" RequestContext : holds

@enduml
